--- a/netlify.toml
+++ b/netlify.toml
@@ -14,9 +14,63 @@
 
 # Set cache headers for static assets
 [[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    # Enable HTTP/2 server push
+    Link = '''
+    </assets/index-*.js>; rel=preload; as=script,
+    </assets/index-*.css>; rel=preload; as=style
+    '''
+    # Content Security Policy
+    Content-Security-Policy = "default-src 'self'; script-src 'self' https://cdn.gpteng.co; style-src 'self' 'unsafe-inline'; img-src 'self' https://backend-pocketbase.7za6uc.easypanel.host data:; connect-src 'self' https://backend-pocketbase.7za6uc.easypanel.host; font-src 'self'; object-src 'none'; media-src 'self'; worker-src 'self'; manifest-src 'self';"
+
+[[headers]]
   for = "/assets/*"
   [headers.values]
+    # Cache assets for 1 year
     Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.html"
+  [headers.values]
+    # Don't cache HTML
+    Cache-Control = "public, max-age=0, must-revalidate"
+
+[[headers]]
+  for = "/assets/index-*.js"
+  [headers.values]
+    # Cache JS chunks for 1 year
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/assets/index-*.css"
+  [headers.values]
+    # Cache CSS chunks for 1 year
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.svg"
+  [headers.values]
+    # Cache SVGs for 1 week
+    Cache-Control = "public, max-age=604800"
+
+# Enable gzip compression
+[build.processing]
+  skip_processing = false
+[build.processing.css]
+  bundle = true
+  minify = true
+[build.processing.js]
+  bundle = true
+  minify = true
+[build.processing.html]
+  pretty_urls = true
+[build.processing.images]
+  compress = true
 
 # Environment variable configuration - define placeholders
 # Actual values should be set in the Netlify UI or dashboard
