Fix: Add terser dependency for build minification

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "node-appwrite": "^15.0.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
+    "terser": "^5.39.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
