Fix: Optimize image loading in product detail page with blur-up loading and intersection observer

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "prebuild": "npm run optimize:images",
     "build": "tsc && vite build",
+    "postbuild": "node scripts/optimize-build.js",
     "build:dev": "vite build --mode development",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -86,6 +87,7 @@
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
     "node-appwrite": "^15.0.1",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.4.47",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.11",
